New run of general.

--- a/flu_shot_learning-GENERAL.ipynb
+++ b/flu_shot_learning-GENERAL.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
+   "id": "suffering-guarantee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +13,6 @@
     "import seaborn as sns\n",
     "import pickle\n",
     "from pathlib import Path\n",
-    "import nbimporter\n",
     "\n",
     "root = Path(\".\")\n",
     "\n",
@@ -25,7 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
+   "id": "southwest-netherlands",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
+   "id": "international-harvard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,6 +46,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "altered-boring",
    "metadata": {},
    "source": [
     "# Loading Help Functions"
@@ -51,7 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
+   "id": "vertical-crisis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +78,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
+   "id": "female-kidney",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,6 +107,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "reduced-variety",
    "metadata": {},
    "source": [
     "# Loading Models"
@@ -109,7 +115,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
+   "id": "statistical-peoples",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +125,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
+   "id": "dense-macedonia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,6 +136,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "veterinary-leonard",
    "metadata": {},
    "source": [
     "# Modelling"
@@ -135,6 +144,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "naked-force",
    "metadata": {},
    "source": [
     "Build final pipelines:"
@@ -142,7 +152,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
+   "id": "casual-debate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +168,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "purple-heart",
    "metadata": {},
    "source": [
     "Prepare input data:"
@@ -164,7 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
+   "id": "vertical-outdoors",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +186,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
+   "id": "developmental-shopper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,6 +196,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "surprising-invasion",
    "metadata": {},
    "source": [
     "Fit pipeline to full train data:"
@@ -189,39 +204,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
+   "id": "arranged-arcade",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   16.4s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:   30.5s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:  1.2min finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    4.5s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    9.2s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:   22.9s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  1.1min remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:  2.5min remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:  5.9min finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.1s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    0.3s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    2.0s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    4.3s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:   12.2s finished\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n",
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.3s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   2 out of   2 | elapsed:    0.7s remaining:    0.0s\n",
-      "[Parallel(n_jobs=1)]: Done   5 out of   5 | elapsed:    1.8s finished\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -238,27 +224,25 @@
        "                                                   'behavioral_outside_home',\n",
        "                                                   'behavioral_touch_face',\n",
        "                                                   'doctor_recc_h1n1...\n",
-       "                                                               num_parallel_tree=None,\n",
-       "                                                               objective='reg:logistic',\n",
-       "                                                               random_state=42,\n",
-       "                                                               reg_alpha=None,\n",
-       "                                                               reg_lambda=None,\n",
-       "                                                               scale_pos_weight=None,\n",
+       "                                                               reg_lambda=1,\n",
+       "                                                               scale_pos_weight=1,\n",
        "                                                               subsample=0.8,\n",
-       "                                                               tree_method=None,\n",
+       "                                                               tree_method='exact',\n",
        "                                                               use_label_encoder=False,\n",
-       "                                                               validate_parameters=None,\n",
+       "                                                               validate_parameters=1,\n",
        "                                                               verbosity=None)),\n",
        "                                                ('LightGBM',\n",
        "                                                 LGBMClassifier(colsample_bytree=0.9,\n",
        "                                                                learning_rate=0.05,\n",
        "                                                                min_child_samples=21,\n",
        "                                                                min_child_weight=0.0015,\n",
-       "                                                                subsample=0.9))],\n",
-       "                                    verbose=3))])"
+       "                                                                subsample=0.9)),\n",
+       "                                                ('CatBoost',\n",
+       "                                                 <catboost.core.CatBoostClassifier object at 0x0000019D257F05E0>)],\n",
+       "                                    n_jobs=-1, verbose=3))])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
+   "id": "proprietary-gibraltar",
    "metadata": {},
    "outputs": [
     {
@@ -288,26 +273,23 @@
        "                                                   'behavioral_outside_home',\n",
        "                                                   'behavioral_touch_face',\n",
        "                                                   'doctor_recc_h1n1...\n",
-       "                                                               objective='reg:logistic',\n",
-       "                                                               random_state=42,\n",
-       "                                                               reg_alpha=None,\n",
-       "                                                               reg_lambda=None,\n",
-       "                                                               scale_pos_weight=None,\n",
        "                                                               subsample=0.7000000000000001,\n",
-       "                                                               tree_method=None,\n",
+       "                                                               tree_method='exact',\n",
        "                                                               use_label_encoder=False,\n",
-       "                                                               validate_parameters=None,\n",
+       "                                                               validate_parameters=1,\n",
        "                                                               verbosity=None)),\n",
        "                                                ('LightGBM',\n",
        "                                                 LGBMClassifier(colsample_bytree=0.6,\n",
        "                                                                learning_rate=0.05,\n",
        "                                                                min_child_samples=23,\n",
        "                                                                min_child_weight=0.0015,\n",
-       "                                                                subsample=0.8500000000000001))],\n",
-       "                                    n_jobs=-1))])"
+       "                                                                subsample=0.8500000000000001)),\n",
+       "                                                ('CatBoost',\n",
+       "                                                 <catboost.core.CatBoostClassifier object at 0x0000019D2516CCD0>)],\n",
+       "                                    n_jobs=-1, verbose=3))])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,6 +300,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "after-china",
    "metadata": {},
    "source": [
     "# Making predictions"
@@ -325,7 +308,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
+   "id": "nearby-drilling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +318,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
+   "id": "legitimate-august",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +328,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
+   "id": "native-hungary",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,136 +344,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
+   "id": "round-listing",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>respondent_id</th>\n",
-       "      <th>h1n1_vaccine</th>\n",
-       "      <th>seasonal_vaccine</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>26707</td>\n",
-       "      <td>0.074206</td>\n",
-       "      <td>0.157077</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>26708</td>\n",
-       "      <td>0.059458</td>\n",
-       "      <td>0.076690</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>26709</td>\n",
-       "      <td>0.392030</td>\n",
-       "      <td>0.791130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>26710</td>\n",
-       "      <td>0.635329</td>\n",
-       "      <td>0.890688</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>26711</td>\n",
-       "      <td>0.220992</td>\n",
-       "      <td>0.443258</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26703</th>\n",
-       "      <td>53410</td>\n",
-       "      <td>0.384730</td>\n",
-       "      <td>0.558179</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26704</th>\n",
-       "      <td>53411</td>\n",
-       "      <td>0.098033</td>\n",
-       "      <td>0.237435</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26705</th>\n",
-       "      <td>53412</td>\n",
-       "      <td>0.089594</td>\n",
-       "      <td>0.152253</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26706</th>\n",
-       "      <td>53413</td>\n",
-       "      <td>0.070351</td>\n",
-       "      <td>0.323656</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26707</th>\n",
-       "      <td>53414</td>\n",
-       "      <td>0.555684</td>\n",
-       "      <td>0.657063</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>26708 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       respondent_id  h1n1_vaccine  seasonal_vaccine\n",
-       "0              26707      0.074206          0.157077\n",
-       "1              26708      0.059458          0.076690\n",
-       "2              26709      0.392030          0.791130\n",
-       "3              26710      0.635329          0.890688\n",
-       "4              26711      0.220992          0.443258\n",
-       "...              ...           ...               ...\n",
-       "26703          53410      0.384730          0.558179\n",
-       "26704          53411      0.098033          0.237435\n",
-       "26705          53412      0.089594          0.152253\n",
-       "26706          53413      0.070351          0.323656\n",
-       "26707          53414      0.555684          0.657063\n",
-       "\n",
-       "[26708 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
+   "id": "emotional-skirt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,7 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
