Added scaler to preprocessor. Full run of GENERAL.

--- a/flu_shot_learning-GENERAL.ipynb
+++ b/flu_shot_learning-GENERAL.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "suffering-guarantee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +25,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "southwest-netherlands",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +35,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "international-harvard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +43,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "altered-boring",
    "metadata": {},
    "source": [
     "# Loading Help Functions"
@@ -55,7 +51,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "vertical-crisis",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +74,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "female-kidney",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +101,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "reduced-variety",
    "metadata": {},
    "source": [
     "# Loading Models"
@@ -116,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "statistical-peoples",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +118,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "dense-macedonia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +127,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "veterinary-leonard",
    "metadata": {},
    "source": [
     "# Modelling"
@@ -144,7 +134,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "naked-force",
    "metadata": {},
    "source": [
     "Build final pipelines:"
@@ -153,7 +142,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "casual-debate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +156,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "purple-heart",
    "metadata": {},
    "source": [
     "Prepare input data:"
@@ -177,7 +164,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "vertical-outdoors",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +173,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "developmental-shopper",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +181,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "surprising-invasion",
    "metadata": {},
    "source": [
     "Fit pipeline to full train data:"
@@ -205,25 +189,24 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "arranged-arcade",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Pipeline(steps=[('preprocessor',\n",
-       "                 ColumnTransformer(transformers=[('numerical_cols',\n",
-       "                                                  SimpleImputer(strategy='most_frequent'),\n",
-       "                                                  ['h1n1_concern',\n",
-       "                                                   'h1n1_knowledge',\n",
-       "                                                   'behavioral_antiviral_meds',\n",
-       "                                                   'behavioral_avoidance',\n",
-       "                                                   'behavioral_face_mask',\n",
-       "                                                   'behavioral_wash_hands',\n",
-       "                                                   'behavioral_large_gatherings',\n",
-       "                                                   'behavioral_outside_home',\n",
-       "                                                   'behavioral_touch_face',\n",
-       "                                                   'doctor_recc_h1n1...\n",
+       "                 Pipeline(steps=[('ColTransf',\n",
+       "                                  ColumnTransformer(transformers=[('numerical_cols',\n",
+       "                                                                   SimpleImputer(strategy='most_frequent'),\n",
+       "                                                                   ['h1n1_concern',\n",
+       "                                                                    'h1n1_knowledge',\n",
+       "                                                                    'behavioral_antiviral_meds',\n",
+       "                                                                    'behavioral_avoidance',\n",
+       "                                                                    'behavioral_face_mask',\n",
+       "                                                                    'behavioral_wash_hands',\n",
+       "                                                                    'behavioral_large_gatherings',\n",
+       "                                                                    'behavioral_outside_home',\n",
+       "                                                                    'behavioral_...\n",
        "                                                               reg_lambda=1,\n",
        "                                                               scale_pos_weight=1,\n",
        "                                                               subsample=0.8,\n",
@@ -238,7 +221,7 @@
        "                                                                min_child_weight=0.0015,\n",
        "                                                                subsample=0.9)),\n",
        "                                                ('CatBoost',\n",
-       "                                                 <catboost.core.CatBoostClassifier object at 0x0000019D257F05E0>)],\n",
+       "                                                 <catboost.core.CatBoostClassifier object at 0x000001D62C04FA30>)],\n",
        "                                    n_jobs=-1, verbose=3))])"
       ]
      },
@@ -253,26 +236,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "proprietary-gibraltar",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Pipeline(steps=[('preprocessor',\n",
-       "                 ColumnTransformer(transformers=[('numerical_cols',\n",
-       "                                                  SimpleImputer(strategy='most_frequent'),\n",
-       "                                                  ['h1n1_concern',\n",
-       "                                                   'h1n1_knowledge',\n",
-       "                                                   'behavioral_antiviral_meds',\n",
-       "                                                   'behavioral_avoidance',\n",
-       "                                                   'behavioral_face_mask',\n",
-       "                                                   'behavioral_wash_hands',\n",
-       "                                                   'behavioral_large_gatherings',\n",
-       "                                                   'behavioral_outside_home',\n",
-       "                                                   'behavioral_touch_face',\n",
-       "                                                   'doctor_recc_h1n1...\n",
+       "                 Pipeline(steps=[('ColTransf',\n",
+       "                                  ColumnTransformer(transformers=[('numerical_cols',\n",
+       "                                                                   SimpleImputer(strategy='most_frequent'),\n",
+       "                                                                   ['h1n1_concern',\n",
+       "                                                                    'h1n1_knowledge',\n",
+       "                                                                    'behavioral_antiviral_meds',\n",
+       "                                                                    'behavioral_avoidance',\n",
+       "                                                                    'behavioral_face_mask',\n",
+       "                                                                    'behavioral_wash_hands',\n",
+       "                                                                    'behavioral_large_gatherings',\n",
+       "                                                                    'behavioral_outside_home',\n",
+       "                                                                    'behavioral_...\n",
        "                                                               subsample=0.7000000000000001,\n",
        "                                                               tree_method='exact',\n",
        "                                                               use_label_encoder=False,\n",
@@ -285,11 +267,11 @@
        "                                                                min_child_weight=0.0015,\n",
        "                                                                subsample=0.8500000000000001)),\n",
        "                                                ('CatBoost',\n",
-       "                                                 <catboost.core.CatBoostClassifier object at 0x0000019D2516CCD0>)],\n",
+       "                                                 <catboost.core.CatBoostClassifier object at 0x000001D62B99B790>)],\n",
        "                                    n_jobs=-1, verbose=3))])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +282,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "after-china",
    "metadata": {},
    "source": [
     "# Making predictions"
@@ -308,8 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "nearby-drilling",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,8 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "legitimate-august",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,8 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "native-hungary",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,18 +322,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "round-listing",
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>respondent_id</th>\n",
+       "      <th>h1n1_vaccine</th>\n",
+       "      <th>seasonal_vaccine</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26707</td>\n",
+       "      <td>0.075280</td>\n",
+       "      <td>0.155117</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>26708</td>\n",
+       "      <td>0.064961</td>\n",
+       "      <td>0.075245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>26709</td>\n",
+       "      <td>0.314402</td>\n",
+       "      <td>0.779881</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>26710</td>\n",
+       "      <td>0.680957</td>\n",
+       "      <td>0.891938</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>26711</td>\n",
+       "      <td>0.247933</td>\n",
+       "      <td>0.424343</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26703</th>\n",
+       "      <td>53410</td>\n",
+       "      <td>0.383297</td>\n",
+       "      <td>0.521872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26704</th>\n",
+       "      <td>53411</td>\n",
+       "      <td>0.100958</td>\n",
+       "      <td>0.249524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26705</th>\n",
+       "      <td>53412</td>\n",
+       "      <td>0.091140</td>\n",
+       "      <td>0.140031</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26706</th>\n",
+       "      <td>53413</td>\n",
+       "      <td>0.075090</td>\n",
+       "      <td>0.305382</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26707</th>\n",
+       "      <td>53414</td>\n",
+       "      <td>0.522983</td>\n",
+       "      <td>0.611522</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>26708 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       respondent_id  h1n1_vaccine  seasonal_vaccine\n",
+       "0              26707      0.075280          0.155117\n",
+       "1              26708      0.064961          0.075245\n",
+       "2              26709      0.314402          0.779881\n",
+       "3              26710      0.680957          0.891938\n",
+       "4              26711      0.247933          0.424343\n",
+       "...              ...           ...               ...\n",
+       "26703          53410      0.383297          0.521872\n",
+       "26704          53411      0.100958          0.249524\n",
+       "26705          53412      0.091140          0.140031\n",
+       "26706          53413      0.075090          0.305382\n",
+       "26707          53414      0.522983          0.611522\n",
+       "\n",
+       "[26708 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "emotional-skirt",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
