--- a/flu_shot_learning-MODEL_SELECTION.ipynb
+++ b/flu_shot_learning-MODEL_SELECTION.ipynb
@@ -41,19 +41,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
-    "scaler = StandardScaler()\n",
-    "\n",
-    "X_train_full = pd.DataFrame(scaler.fit_transform(X_train_full), columns=X_train_full.columns, index=X_train_full.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
@@ -74,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegressionCV, RidgeClassifierCV\n",
+    "from sklearn.linear_model import LogisticRegressionCV\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.naive_bayes import GaussianNB"
@@ -88,16 +75,6 @@
    "source": [
     "LogReg_class_h1n1 = LogisticRegressionCV(max_iter=1000, n_jobs=-1)\n",
     "LogReg_class_seas = LogisticRegressionCV(max_iter=1000, n_jobs=-1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Ridge_class_h1n1 = RidgeClassifierCV(alphas=[0.1, 0.25, 0.5, 1, 5, 10], cv=5)\n",
-    "Ridge_class_seas = RidgeClassifierCV(alphas=[0.1, 0.25, 0.5, 1, 5, 10], cv=5)"
    ]
   },
   {
@@ -359,28 +336,6 @@
    ],
    "source": [
     "cross_validate_model('Logist', models_h1n1, mean_roc_dict_h1n1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "RidgeCV\n",
-      "Fold: 0\n",
-      "Fold: 1\n",
-      "Fold: 2\n",
-      "Fold: 3\n",
-      "Fold: 4\n"
-     ]
-    }
-   ],
-   "source": [
-    "cross_validate_model('RidgeCV', models_h1n1, mean_roc_dict_h1n1)"
    ]
   },
   {
@@ -1212,7 +1167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
