--- a/flu_shot_learning-PREPROCESSING.ipynb
+++ b/flu_shot_learning-PREPROCESSING.ipynb
@@ -3,7 +3,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cutting-istanbul",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +24,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "greater-designer",
    "metadata": {},
    "source": [
     "# Loading data"
@@ -34,7 +32,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "governmental-nutrition",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +42,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "recorded-halifax",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +50,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perfect-enough",
    "metadata": {},
    "source": [
     "# Data First Impressions"
@@ -63,7 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "qualified-nightlife",
    "metadata": {},
    "outputs": [
     {
@@ -84,7 +78,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "intense-reward",
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +354,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "oriental-composer",
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +438,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "acoustic-balloon",
    "metadata": {},
    "outputs": [
     {
@@ -502,7 +493,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "determined-unknown",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +502,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "wound-raleigh",
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +709,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "intermediate-motivation",
    "metadata": {},
    "outputs": [
     {
@@ -946,7 +934,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "falling-authorization",
    "metadata": {},
    "source": [
     "* We can see that most columns are binary (either 0 or 1) - this can be seen from the quartiles of the data.\n",
@@ -955,7 +942,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "amino-thought",
    "metadata": {},
    "source": [
     "# Data Cleaning"
@@ -963,7 +949,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "geological-nepal",
    "metadata": {},
    "source": [
     "Lets see which columns have missing values:"
@@ -972,7 +957,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "verbal-motion",
    "metadata": {},
    "outputs": [
     {
@@ -1232,7 +1216,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "animal-dining",
    "metadata": {},
    "source": [
     "Lets look more closely to the features with more than 10% missing values:"
@@ -1241,7 +1224,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "indian-dispute",
    "metadata": {},
    "outputs": [
     {
@@ -1313,7 +1295,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "everyday-russian",
    "metadata": {},
    "source": [
     "These columns have such a high percentage of missing values that I might consider just dropping them out of the classification.\n",
@@ -1328,7 +1309,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alert-trader",
    "metadata": {},
    "source": [
     "For the *income_poverty* feature, the possible values are:"
@@ -1337,7 +1317,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "subject-landing",
    "metadata": {},
    "outputs": [
     {
@@ -1360,7 +1339,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "documented-london",
    "metadata": {},
    "source": [
     "Which we can simplify in terms of income as [*Low*, *Medium*, *High*]:"
@@ -1369,7 +1347,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "integrated-romantic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1380,7 +1357,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "supreme-ivory",
    "metadata": {},
    "source": [
     "We should design a function to make this simpification more general so that we can later apply it to the test dataset:"
@@ -1389,7 +1365,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "considered-armenia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1413,7 +1388,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "raised-guatemala",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1422,7 +1396,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "intelligent-departure",
    "metadata": {},
    "source": [
     "Now, from our EDA, we can see that income has a relation with taking the vaccines so we should try to *OrdinalEncode* this column:"
@@ -1431,7 +1404,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "acceptable-tablet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1443,7 +1415,6 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "allied-tanzania",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1461,7 +1432,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "signal-macro",
    "metadata": {},
    "source": [
     "We will now do the same for the *education* and *age_group* columns - also based on our EDA:"
@@ -1470,7 +1440,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "middle-hanging",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1487,7 +1456,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "opposed-occasions",
    "metadata": {},
    "source": [
     "Regarding, *health_insurance* and *employment_industry/occupation*, my first idea was that, taking into account that almost half of the data is missing, I was going to drop these columns, instead of making possibly biased assumptions about the data. However, I later experimented with adding these columns to the *categorical_cols* preprocessing and got better results so that's what I will do."
@@ -1496,7 +1464,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "collective-gravity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1505,8 +1472,84 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employment_industry_order = ['rucpziij',\n",
+    "                             'xicduogh',\n",
+    "                             'saaquncn',\n",
+    "                             'mcubkhph',\n",
+    "                             'nduyfdeo',\n",
+    "                             'vjjrobsf',\n",
+    "                             'xqicxuve',\n",
+    "                             'phxvnwax',\n",
+    "                             'pxcmvdjn',\n",
+    "                             'dotnnunm',\n",
+    "                             'cfqqtusy',\n",
+    "                             'atmlpfrs',\n",
+    "                             'ldnlellj',\n",
+    "                             'wlfvacwt',\n",
+    "                             'mfikgejo',\n",
+    "                             'wxleyezf',\n",
+    "                             'msuufmds',\n",
+    "                             'arjwrbjb',\n",
+    "                             'qnlwzans',\n",
+    "                             'fcxhlnwr',\n",
+    "                             'haxffmxo']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employment_occupation_order = ['qxajmpny',\n",
+    "                             'uqqtjvyb',\n",
+    "                             'tfqavkke',\n",
+    "                             'pvmttkik',\n",
+    "                             'rcertsgn',\n",
+    "                             'xqwwgdyp',\n",
+    "                             'xgwztkwe',\n",
+    "                             'ukymxvdu',\n",
+    "                             'ccgxvspp',\n",
+    "                             'vlluhbov',\n",
+    "                             'oijqvulv',\n",
+    "                             'kldqjyjy',\n",
+    "                             'xtkaffoo',\n",
+    "                             'dlvbwzss',\n",
+    "                             'hfxkjkmi',\n",
+    "                             'mxkfnird',\n",
+    "                             'hodpvpew',\n",
+    "                             'bxpfxfdn',\n",
+    "                             'emcorrxb',\n",
+    "                             'xzmlyyjv',\n",
+    "                             'haliazsg',\n",
+    "                             'cmhcxjea',\n",
+    "                             'dcjcmpih']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employment_industry_pipe = Pipeline(steps=[('impute', imputer_most_frequent),\n",
+    "                                 ('encode', OrdinalEncoder(categories=[np.array(employment_industry_order)]))\n",
+    "                                ])\n",
+    "\n",
+    "employment_occupation_pipe = Pipeline(steps=[('impute', imputer_most_frequent),\n",
+    "                           ('encode', OrdinalEncoder(categories=[np.array(employment_occupation_order)]))\n",
+    "                          ])\n",
+    "\n",
+    "#ordinal_cols.extend(['employment_industry', 'employment_occupation'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "failing-cannon",
    "metadata": {},
    "source": [
     "Now, we can look into two other columns with missing values (> 8% missing) - *doctor_recc_h1n1* and *doctor_recc_seasonal*:"
@@ -1514,8 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "sonic-brighton",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1564,7 +1606,7 @@
        "doctor_recc_seasonal              2160                8.09"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,8 +1617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "significant-washington",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1666,7 @@
        "1.0       5408       8094"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1637,7 +1678,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accurate-specialist",
    "metadata": {},
    "source": [
     "Since doctors seem to not recommend the vacines about 2-3 times as often as they recommend it, we can assume that the missing values represent times where the doctor did not recommend the shots. So:"
@@ -1645,8 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "declared-think",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1660,7 +1699,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "perceived-jerusalem",
    "metadata": {},
    "source": [
     "For the remaining columns, we can also impute them with the *most frequent* value since there are <8% of missing values and the values are mostly categorical so we dont want to impute with the mean. Thus: "
@@ -1668,8 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "blessed-comfort",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1678,8 +1715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "dated-analyst",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1689,8 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "fifty-struggle",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,8 +1734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "balanced-prospect",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1713,8 +1747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "brave-paris",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1724,7 +1757,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "suspended-decimal",
    "metadata": {},
    "source": [
     "# Feature Engineering"
@@ -1732,7 +1764,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solar-washer",
    "metadata": {},
    "source": [
     "Using the conclusions of our EDA, we want to engineer the following features:\n",
@@ -1747,8 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "stainless-unknown",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1776,8 +1806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "second-discount",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1786,8 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "plain-religion",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1801,7 +1829,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sixth-ratio",
    "metadata": {},
    "source": [
     "# Final preprocessor\n",
@@ -1811,25 +1838,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "cognitive-bangkok",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "preprocessor = ColumnTransformer([('numerical_cols', imputer_most_frequent, numerical_cols),\n",
+    "ColTransf = ColumnTransformer([('numerical_cols', imputer_most_frequent, numerical_cols),\n",
     "                                  ('categorical_cols', cat_preprocessor, categorical_cols),\n",
     "                                  ('income', income_pipe, ['income_poverty']),\n",
     "                                  ('education', education_pipe, ['education']),\n",
-    "                                  ('age', age_pipe, ['age_group'])])"
+    "                                  ('age', age_pipe, ['age_group'])])\n",
+    "\n",
+    "preprocessor = Pipeline(steps=[('ColTransf', ColTransf),\n",
+    "                               ('Scaler', StandardScaler())])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "id": "miniature-details",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1839,8 +1867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "incorporate-sperm",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1864,7 +1891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
